# Backuper

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
crates/app/: Cargo.toml  build.rs
crates/app/src/: bootstrap.rs  main.rs  notifications.rs  tray.rs
crates/app/src/bindings/: jobs.rs  mod.rs  sources.rs  storages.rs
crates/app/src/handlers/: jobs.rs  journal.rs  mod.rs  settings.rs  sources.rs  storages.rs
crates/app/ui/: main.slint  theme.slint
crates/app/ui/dialogs/: job_edit.slint  schedule_edit.slint  source_edit.slint  storage_edit.slint
crates/app/ui/pages/: dashboard.slint  jobs.slint  journal.slint  placeholder.slint  settings.slint  sources.slint  storages.slint
crates/app/ui/widgets/: button.slint  card.slint  sidebar.slint
crates/application/: Cargo.toml
crates/application/src/: clock.rs  context.rs  lib.rs
crates/application/src/commands/: jobs.rs  mod.rs  settings.rs  sources.rs  storages.rs
crates/application/src/pipeline/: mod.rs
crates/application/src/scheduler/: mod.rs  queue.rs  retry.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: archive.rs  errors.rs  events.rs  job.rs  lib.rs  notifier.rs  onec.rs  repo.rs  schedule.rs  source.rs  storage.rs  vault.rs
crates/infra-1c/: Cargo.toml
crates/infra-1c/src/: lib.rs
crates/infra-archive/: Cargo.toml
crates/infra-archive/src/: lib.rs
crates/infra-cloud-gdrive/: Cargo.toml
crates/infra-cloud-gdrive/src/: lib.rs
crates/infra-cloud-yadisk/: Cargo.toml
crates/infra-cloud-yadisk/src/: lib.rs
crates/infra-fs/: Cargo.toml
crates/infra-fs/src/: lib.rs
crates/infra-secrets/: Cargo.toml
crates/infra-secrets/src/: dpapi.rs  lib.rs  memory.rs
crates/infra-storage-sqlite/: Cargo.toml
crates/infra-storage-sqlite/src/: lib.rs  mappers.rs  repos.rs
crates/infra-storage-sqlite/src/mappers/: job_run.rs  schedule_kind.rs  source_kind.rs
crates/infra-storage-sqlite/tests/: jobs.rs  sources.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  logging.rs  paths.rs
migrations/: 0001_init.sql
