[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infra-storage-sqlite",
    "crates/infra-secrets",
    "crates/infra-archive",
    "crates/infra-1c",
    "crates/infra-cloud-yadisk",
    "crates/infra-cloud-gdrive",
    "crates/infra-fs",
    "crates/shared",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
authors = ["Backuper Team"]
repository = "https://example.invalid/backuper"

[workspace.dependencies]
# --- local crates ---
domain = { path = "crates/domain" }
application = { path = "crates/application" }
shared = { path = "crates/shared" }
infra-storage-sqlite = { path = "crates/infra-storage-sqlite" }
infra-secrets = { path = "crates/infra-secrets" }
infra-archive = { path = "crates/infra-archive" }
infra-1c = { path = "crates/infra-1c" }
infra-fs = { path = "crates/infra-fs" }
infra-cloud-yadisk = { path = "crates/infra-cloud-yadisk" }
infra-cloud-gdrive = { path = "crates/infra-cloud-gdrive" }

# --- async runtime ---
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-channel = "2.3"
parking_lot = "0.12"
dashmap = "6"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "0.8"

# --- logging / tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# --- errors ---
thiserror = "1"
anyhow = "1"

# --- time / scheduling ---
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
cron = "0.12"

# --- sqlite ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "uuid", "json", "time"] }

# --- http / oauth ---
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"] }

# --- secrets / crypto ---
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["pem"] }

# --- archive ---
zip = { version = "2", default-features = false, features = ["aes-crypto", "deflate", "zstd", "time"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tar = "0.4"

# --- fs / glob ---
walkdir = "2"
globset = "0.4"
notify = "6"
tempfile = "3"
directories = "5"

# --- misc ---
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
os_info = { version = "3", default-features = false }
bytes = "1"
once_cell = "1"

# --- windows-only ---
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation",
] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
keyring = "3"

# --- gui (slint) ---
# Используем default features: backend-winit + renderer-femtovg + accessibility + std + compat-1-2.
# Skia-renderer мощнее, но требует C++ toolchain — включим позже опционально.
slint = "1.15"
slint-build = "1.15"

# --- desktop integrations ---
tray-icon = "0.20"
notify-rust = "4"
auto-launch = "0.5"
single-instance = "0.3"
rfd = "0.15"
open = "5"
self_update = { version = "0.41", default-features = false, features = ["rustls", "compression-zip-deflate"] }
arboard = "3"

# --- i18n ---
unic-langid = { version = "0.9", features = ["macros"] }

# --- testing ---
mockall = "0.13"
proptest = "1"
insta = { version = "1", features = ["json", "yaml"] }
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
serial_test = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
