[package]
name = "application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[dependencies]
domain = { workspace = true }
shared = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

time = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }

# Pipeline stub deps — будут вынесены в infra-archive trait на Stage 2.
walkdir = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
