[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
secrecy = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
