[package]
name = "infra-1c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[dependencies]
domain = { workspace = true }
shared = { workspace = true }

tokio = { workspace = true, features = ["process"] }
async-trait = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
