[package]
name = "infra-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[dependencies]
domain = { workspace = true }
shared = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
