[package]
name = "infra-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[dependencies]
domain = { workspace = true }
shared = { workspace = true }

tokio = { workspace = true, features = ["sync", "fs"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
